BUGFIX: Fix MxGraph svg overflow

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Override/Sandstorm.MxGraph/Sandstorm.MxGraph.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Override/Sandstorm.MxGraph/Sandstorm.MxGraph.scss
@@ -8,4 +8,8 @@
         max-width: 100%;
         height: auto;
     }
+    svg {
+        max-width: 100%;
+        height: auto;
+    }
 }
